[package]
name = "imgur"
version = "0.4.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
description = "Interface to the imgur API."
license = "MIT"
repository = "https://github.com/crumblingstatue/rust-imgur.git"
documentation = "http://crumblingstatue.github.io/doc/imgur/imgur/index.html"

[dependencies]
curl = "0.2.12"
serde_json = "0.6.0"
try_opt = "0.1.1"
