[package]
name = "imgur"
version = "0.7.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
description = "Interface to the imgur API."
license = "MIT"
repository = "https://github.com/crumblingstatue/rust-imgur.git"
documentation = "http://crumblingstatue.github.io/doc/imgur/imgur/index.html"

[dependencies]
hyper = "0.10.5"
hyper-rustls = "0.6.0"
serde_json = "1.0.2"
